hamburger menu on other pages, fixed nowrap text bug sorta

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ a:hover {
 }
 
 #general-tour-text{
-    padding-top: 40%;
+    padding-top: 47.5%;
     padding-left: 2.5%;
     /*padding-left: 2.5%;*/
     margin-bottom: 5%;
@@ -387,6 +387,7 @@ body {
     color: #000;
     display: block;
     transition: 0.3s;
+    white-space: nowrap;
 }
 
 .sidenav a:hover, .offcanvas a:focus{
@@ -406,7 +407,7 @@ body {
 }
     
 .hamburgermenu{
-    margin-left: 30px;
+    /*margin-top: 10px;*/
     font-size: 50px;
     cursor: pointer;
 }
@@ -427,4 +428,67 @@ body {
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+}
+
+/*modal slide from bottom css*/
+
+.modal.fade.in .modal-body {
+    bottom: 0; 
+}
+.modal-body {
+    position: absolute;
+    bottom: -80px;
+    /*right: 50%;*/
+    padding: 15px;
+    width: 100%;
+    height: 80px;
+    background-color: #e5e5e5;
+    border-radius: 6px 6px 0 0;
+    -webkit-transition: bottom 0.3s ease-out;
+    -moz-transition: bottom 0.3s ease-out;
+    -o-transition: bottom 0.3s ease-out;
+    transition: bottom 0.3s ease-out;
+}
+.close {
+    margin-top: -20px;
+    text-shadow: 0 1px 0 #ffffff;
+}
+.popup-button {
+    font-weight: bold;
+    float:right;
+    /*margin-right: 2%;*/
+}
+
+#nav-bar{
+    background-color: white;
+    /*height: 70px;*/
+
+}
+
+.hamburgerLine{
+    width: 35px;
+    height: 5px;
+    background-color: white;
+    margin: 6px 0;
+    margin-left: 30px;
+}
+
+.blackHamburgerLine{
+    width: 35px;
+    height: 5px;
+    background-color: black;
+    margin: 6px 0;
+    margin-left: 30px;
+}
+
+.hamburgerLine:first-child{
+    margin-top: 16px;
+}
+
+.blackHamburgerLine:first-child{
+    margin-top: 13px;
+}
+
+.blackHamburgerLine:last-child{
+    margin-bottom: 13px;
 }
